<resources>
    <string name="app_name">Máquina de juegos</string>
    <string name="gameTitle_guessNumber">Adivino por un día</string>
    <string name="gameTitle_adder">El tragón</string>
    <string name="gameTitle_adventure">Aventura en miniatura</string>
    <string name="gameTitle_memory">El cocinero</string>
    <string name="gameTitle_snap">Jimmy el rápido</string>

    <string name="calculator_number0">0</string>
    <string name="calculator_number1">1</string>
    <string name="calculator_number2">2</string>
    <string name="calculator_number3">3</string>
    <string name="calculator_number4">4</string>
    <string name="calculator_number5">5</string>
    <string name="calculator_number6">6</string>
    <string name="calculator_number7">7</string>
    <string name="calculator_number8">8</string>
    <string name="calculator_number9">9</string>
    <string name="calculator_backspace">Del</string>
    <string name="calculator_enter">OK</string>

    <string name="adder_prompt">Dime cuántas empanadillas te has comido, y las sumaré para ti.</string>
    <string name="adder_result">Hasta ahora llevas comidas %s empanadillas.</string>
    <string name="adder_excess">Igual deberías parar ya, ¿no?</string>

    <string name="guessNumber_prompt">¡He pensado un número entre 1 y 100! ¡Adivina cuál!</string>
    <string name="guessNumber_lower">No, mi número es más bajo que ése.</string>
    <string name="guessNumber_greater">No, mi número es más grande que ése.</string>
    <string name="guessNumber_correct">¡Has acertado! ¡Y solo te ha llevado %s intentos!</string>

    <string name="adventure_north">Norte</string>
    <string name="adventure_south">Sur</string>
    <string name="adventure_east">Este</string>
    <string name="adventure_west">Oeste</string>
    <string name="adventure_location_0_0">Una gigantesca pirámide escalonada gobierna este lugar. Parece inaccesible desde aquí abajo, sin escalones de tamaño humano a la vista. En lo alto puedes distinguir una puerta metálica doble, cerrada, con el dibujo de unos ojos que parecen mirarte desde las alturas.</string>
    <string name="adventure_location_0_1">Una gruta en medio de una elevada pared de piedra sirve de nacimiento a un arroyuelo que discurre hacia el sureste. Un solitario salmón intenta en vano subir a contracorriente, una y otra vez.</string>
    <string name="adventure_location_0_2">El bosque se vuelve totalmente impenetrable a este nivel, incluso para la luz. Por todas partes ves cosas moviéndose, y la textura de los troncos te hacen ver grandes ojos que te observan desde todos los ángulos.</string>
    <string name="adventure_location_1_0">Te encuentras al borde de un desierto que llega hasta donde alcanza la vista. Dunas de fina arena montan unas sobre otras, y el reflejo del sol ciega tus ojos. No crees ser capaz de aguantar mucho tiempo en este vasto lugar de muerte.</string>
    <string name="adventure_location_1_1">Estás justo en la frontera entre las tierras áridas del Norte y la zona húmeda y boscosa del Sur. Muy cerca hacia el Este hay una cabaña de ladrillos rodeada por un frondoso bosque. Un río poco caudaloso fluye hacia el Sur.</string>
    <string name="adventure_location_1_2">Te has internado levemente en los lindes de un bosque húmedo y oscuro. Los árboles cada vez se cierran más, impidiéndote el paso, y cientos de extraños sonidos llenan tus oídos, desde animales correteando hasta el rumor de las hojas secas bajo tus pies.</string>
    <string name="adventure_location_2_0">Entre la niebla puedes divisar una escarpada cordillera de montañas coronadas de nieve. Un grupo de jabalíes corretean por la ladera de una de las montañas, los lechones jugueteando entre ellos mientras los adultos se afanan buscando comida.</string>
    <string name="adventure_location_2_1">Delante tuya se alza una pequeña cabaña de piedra y puerta de madera. Parece abandonada desde hace mucho tiempo, salvo por caracoles y algún que otro murciélago que cuelga del porche delantero.</string>
    <string name="adventure_location_2_2">Un pozo se alza perdido en este lugar, último retazo de civilización en este paraje perdido. Mirando en su interior puedes ver que está seco desde hace tiempo.</string>

    <string name="memory_prompt">Encuentra las parejas de ingredientes iguales. ¡Cuidado! ¡Solo te puedes equivocar 5 veces!</string>
    <string name="memory_win">¡Enhorabuena! ¡Has ganado!</string>
    <string name="memory_lose">Lo siento, has perdido. ¡Inténtalo otra vez!</string>
    <string name="memory_option1">Ternera</string>
    <string name="memory_option2">Atún</string>
    <string name="memory_option3">Zanahoria</string>
    <string name="memory_option4">Cebolla</string>
    <string name="memory_option5">Rata</string>
    <string name="memory_option6">Pollo</string>
    <string name="memory_option7">Queso</string>
    <string name="memory_option8">Pan</string>

    <string name="snap_prompt">Pulsa en \"Empezar\" para ver un número por un momento. Intenta verlo, y luego pulsa el número que creas que es el correcto.</string>
    <string name="snap_start">Empezar</string>
    <string name="snap_win">¡Correcto!</string>
    <string name="snap_lose">¡Has fallado!</string>
</resources>
