<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:maxLines="1"
        android:textAlignment="textEnd"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_number7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_number7"/>

        <Button
            android:id="@+id/button_number8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_number8"/>

        <Button
            android:id="@+id/button_number9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_number9"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_number4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_number4"/>

        <Button
            android:id="@+id/button_number5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_number5"/>

        <Button
            android:id="@+id/button_number6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_number6"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_number1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_number1"/>

        <Button
            android:id="@+id/button_number2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_number2"/>

        <Button
            android:id="@+id/button_number3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_number3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_number0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_number0"/>

        <Button
            android:id="@+id/button_backspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_backspace"/>

        <Button
            android:id="@+id/button_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_enter"/>

    </LinearLayout>
</LinearLayout>


